# computeRetopology

./: .gitignore  CMakeLists.txt
src/OpenMesh/Core/Geometry/: VectorT.hh
src/patchgen/: GeometryData.h  ILP.h  PatchHalfedgeTraits.h  PatchParam.h  PatchVertexTag.h  PatchVertexTraits.h  SubPatchData.h  calc_ilp_sides.cpp  calc_quadrangulation.cpp  calc_type1.cpp  calc_type4.cpp  check_geometry.cpp  decl.h  edit_geometry.cpp  generate_topology.h
src/patchgen_demo/: Patch.cpp  Patch.h  main.cpp  main_glut.cpp
src/patchgen_demo/curvenetwork/: Core.cc  Core.hh  Edgechain.cc  Edgechain.hh  Halfchain.cc  Halfchain.hh  Halfedge.cc  Halfedge.hh  Patch.cc  Patch.hh  Patch_static.cc  Vertex.cc  Vertex.hh  helper.cc
